0.19/_sources/api/generated/deepchecks.nlp.checks.data_integrity.UnknownTokens.rst.txt

UnknownTokens
=============



.. currentmodule:: deepchecks.nlp.checks.data_integrity

.. autoclass:: UnknownTokens
   :special-members: __init__







.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   UnknownTokens.add_condition
   
   
   UnknownTokens.add_condition_ratio_of_unknown_words_less_or_equal
   
   
   UnknownTokens.clean_conditions
   
   
   UnknownTokens.conditions_decision
   
   
   UnknownTokens.config
   
   
   UnknownTokens.create_pie_chart
   
   
   UnknownTokens.find_unknown_words
   
   
   UnknownTokens.from_config
   
   
   UnknownTokens.from_json
   
   
   UnknownTokens.metadata
   
   
   UnknownTokens.name
   
   
   UnknownTokens.params
   
   
   UnknownTokens.remove_condition
   
   
   UnknownTokens.run
   
   
   UnknownTokens.run_logic
   
   
   UnknownTokens.to_json
   
















Examples
~~~~~~~~

.. raw:: html

    <div class="sphx-glr-thumbcontainer">

.. only:: html

 .. figure:: /nlp/auto_checks/data_integrity/images/thumb/sphx_glr_plot_unknown_tokens_thumb.png
     :alt: UnknownTokens

     :ref:`sphx_glr_nlp_auto_checks_data_integrity_plot_unknown_tokens.py`

.. raw:: html

    </div>
    <div style="clear:both"></div>


